# haskell-portable-lines

./: LICENSE  portable-lines.cabal  text-portable.cabal
Text/: Portable.hs  PortableLines.hs
Text/Portable/ByteString/: Char8.hs
Text/PortableLines/: ByteString.hs
Text/PortableLines/ByteString/: Char8.hs  Lazy.hs
testing/: Main.hs  expected  test.hs
